# invoice_parser

./: .cursorrules  .dockerignore  .env.example  .gitignore  .markdownlint.json  CHANGELOG_ERROR_HANDLING.md  CHANGES_DOCKER_ONLY.md  CHANGES_POSTGRES_TO_DB.md  CHANGES_SUMMARY.md  CLAUDE.md  CLIENT_SAFE_ERRORS.txt  COLUMN_ANALYSIS_CONFIG.md  CRITICAL_FIXES_20251220.md  CRITICAL_FIXES_APPLIED.md  DATABASE_ANALYSIS_COMPLETE.md  DEPLOYMENT_SUMMARY.md  DOCKER_ONLY.md  DOCKER_QUICKSTART.md  DOCKER_SETUP.md  DOCKER_USAGE.md  DYNAMIC_COLUMN_WIDTH_SYSTEM.md  Dockerfile  EDITABLE_FIELDS_FEATURE.md  ERROR_HANDLING.md  ERROR_MESSAGES.md  FEATURE_LOGIN_COMPLETE.md  FINAL_CHANGES.txt  FINAL_TEST_REPORT.md  FRONTEND.md  FRONTEND_SUMMARY.md  FRONTEND_TABLE_UPDATE_SUMMARY.md  HARDCODE_CHECK_REPORT.md  HARDCODE_FIXED.md  HARDCODE_FIXES_EXPLANATION.md  HARDCODE_FIXES_SUMMARY.md  HARDCODE_REPORT.md  INSTALL_CODE.md  PROGRAM_AND_DATABASE_ANALYSIS.md  PROJECT_NAMING.md  QUICKSTART.md  (+53 more)
.invoice_parser/: settings.local.json
alembic/: env.py
docs/: AUTOMATED_FRONTEND_TESTING.md  DATABASE_CONFIG.md  ENDPOINTS.md  EXPORT_FILES.md  FILENAME_FORMAT.md  FILE_UPLOAD_AUTH.md  FIRST_LOGIN.md  FRONTEND_AUTO_TESTING_SETUP.md  JWT_EXPLAINED.md  JWT_SECRET_KEY.md  LOGIN_METHODS.md  LOGIN_PAGE.md  PARSING_MODES.md  RAW_DATA_EXPLAINED.md  REJECT_APPROVAL.md  RESTORED_VARIABLES.md  TABLE_RENDERING_IMPROVEMENTS.md  TABLE_TESTING_GUIDE.md  TELEGRAM_BOT.md  TELEGRAM_DATA_FLOW.md  TELEGRAM_SETUP.md  VISUAL_FRONTEND_TEST.md
don't need/: comparison_results.md  dnipromash.pdf.formatted_text.txt  invoice_parser.py  (+17 more)
(+233 files in other folders)
